c4prj2_input/grade.txt
Grading at Wed Mar 10 21:02:39 UTC 2021
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:13:22: error: incompatible types when assigning to type ‘deck_t {aka struct deck_tag}’ from type ‘void *’
     if (fc->decks[i] = NULL){
                      ^
Compilation of future.c failed

Overall Grade: F
